# StackVec

./: .gitignore  CMakeLists.txt  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
include/: stackvec.h
src/: stackvec.c
tests/: add.c  create.c  remove.c
